[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-emitter"
version = "1.0.0"
authors = [
    { name="Felix Korovin", email="felix.korovin@icloud.com" },
]
description = "A lightweight event emitter library for Python"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/skilef/tiny-emitter"