[metadata]
name = tiny-emitter
version = 1.0.0
description = A lightweight event emitter library for Python
long_description = file: README.md
long_description_content_type = text/markdown
author = Felix Korovin
author_email = felix.korovin@icloud.com
contact = https://github.com/skilef
license = MIT

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:

[options.packages.find]
where=src